--- a/vue/package.json
+++ b/vue/package.json
@@ -14,7 +14,8 @@
     "test:e2e:dev": "vue-cli-service test:e2e",
     "test:unit": "TZ=Europe/Helsinki vue-cli-service test:unit --ci --coverage --no-cache",
     "test:unit:dev": "TZ=Europe/Helsinki vue-cli-service test:unit --watch --no-cache",
-    "test:unit:report": "$BROWSER coverage/lcov-report/index.html"
+    "test:unit:report": "$BROWSER coverage/lcov-report/index.html",
+    "test:unit:notz": "vue-cli-service test:unit --watch --no-cache"
   },
   "dependencies": {
     "@openapitools/openapi-generator-cli": "^1.0.1-4.1.3",
